Switched Base64 encoder to the java.util version